--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -52,7 +52,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     - Unlike charges ($\sigma=-1$): attraction along $\hat{\mathbf{r}}$.
     - Stationary source: symmetry implies purely radial action; no tangential component.
 
-    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, the emitter’s speed, and a $1/r^2$ falloff, then add up all such pushes.
+    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges and a $1/r^2$ falloff, then add up all such pushes.
 
 ### Receiver velocity: radial vs orthogonal components (instantaneous effect)
 
@@ -87,7 +87,7 @@ The surface–delta shells yield impulsive forces at isolated hit times. One may
 $$
 \delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),\quad\text{(REG)}
 $$
-while preserving total emission $q_{\text{eff}}$. This produces continuous-in-time forces and classical $C^1$ solutions for $\mathbf{s}(t)$ given $C^1$ initial data. In the super-field-speed regime ($|\mathbf{v}_a|>1$), multiple self-roots can occur; summing over all causal times with an integrable regularization ensures finite total impulse. In plain English: the ideal model gives instantaneous “kicks”; the $\eta$-thickening turns them into brief, smooth pushes so standard ODE methods apply.
+while preserving total emission $q$. This produces continuous-in-time forces and classical $C^1$ solutions for $\mathbf{s}(t)$ given $C^1$ initial data. In the super-field-speed regime ($|\mathbf{v}_a|>1$), multiple self-roots can occur; summing over all causal times with an integrable regularization ensures finite total impulse. In plain English: the ideal model gives instantaneous “kicks”; the $\eta$-thickening turns them into brief, smooth pushes so standard ODE methods apply.
 
 ### **Core Principles**
 
