--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
@@ -8,7 +8,7 @@ Existing text excerpt:
 > \qquad
 > \frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t_0)\cdot \hat{\mathbf{r}}
 > \;=\;
-> \frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big).
+> \frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}.
 > $$
 
 Detailed explanation (decomposition and energetics):
