--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Analytic Baselines.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Analytic Baselines.md
@@ -1,7 +1,7 @@
 # 00.2.2 — Analytic Baselines (central 1/r² reference)
 
 Purpose:
-- Establish closed-form “Kepler-like” baselines by removing delay and emitter-speed modulation, yielding central inverse-square problems with exact solutions.
+- Establish closed-form “Kepler-like” baselines by removing delay, yielding central inverse-square problems with exact solutions.
 - Use these as reference solutions for perturbation about the canonical delayed law.
 
 Models:
