--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.3 - Small-Eccentricity Orbit — Kepler vs Delay.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.3 - Small-Eccentricity Orbit — Kepler vs Delay.md
@@ -13,7 +13,7 @@ Baseline (central 1/r² reference):
 
 Canonical delayed-law corrections:
 - Non-centrality from aiming at the past position introduces a small tangential component.
-- Perturbative method: average over one period; compute secular drift terms (precession rate δω, radius correction δr, energy leakage scales with modulation).
+- Perturbative method: average over one period; compute secular drift terms (precession rate δω, radius correction δr, energy leakage scales with delay).
 
 Deliverables:
 - Baseline formulas (ω, v, E) and first-order correction scaffolding.
