--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.5 - Numerical Cross-Checks.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.5 - Numerical Cross-Checks.md
@@ -19,4 +19,4 @@ Outputs:
 - Error metrics vs. closed forms (periods, precession rates, timing to reach r thresholds).
 - Convergence with respect to η and timestep.
 
-Plain language: Use a consistent numerical playbook to check formulas: find causal hits, add the radial pushes with emitter-dimming, and compare against the simple closed-form cases where those exist.
+Plain language: Use a consistent numerical playbook to check formulas: find causal hits, add the radial pushes, and compare against the simple closed-form cases where those exist.
