--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -117,7 +117,7 @@ $$
 $$
 
 Notes:
-- Emission cadence is constant; only per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s velocity influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
+- Emission cadence and per-wavefront amplitude are constant The receiver’s velocity influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - No cross products, no right-hand-rule magnetism; every per-hit action is along $\hat{\mathbf{r}}$.
 
 Plain language: For each past emission that can reach you now, push along the line back to where it came from, weaken the push by the emitter’s speed and by 1/r², then add all pushes.
@@ -167,7 +167,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - Emission cadence and per-wavefront amplitude are constant (no emitter-speed dimming). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
-Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims only the emitter’s per-wavefront amplitude and response, not cadence.
+Plain language: Fix units so the field speed is one; use ε as the basic charge; emission cadence and per-wavefront amplitude are constant; receiver motion affects only instantaneous power.
 
 ---
 
@@ -192,5 +192,5 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - Notation lint (common mistakes):
   - Use bold for vectors: $\mathbf{v}$, not plain v.
   - Reserve $v$ for the field speed (scalar). Use $\|\mathbf{v}\|$ for speed magnitude, or $\beta=\|\mathbf{v}\|/v$; with $v=1$, $\beta=\|\mathbf{v}\|$.
-  - When giving the default dimming, write $f(\beta)=1/(1+\beta)$, not $f(|v|)$.
+  - Do not introduce emitter-speed dimming functions $f(\beta)$; emission cadence and per-wavefront amplitude are constant.
   - Do not write mixed forms like $|v|$ to mean speed; bold the vector and take its norm.
