--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
@@ -23,6 +23,6 @@ Event-aware integration (practical algorithm):
    - Monitor invariants over resolved windows (work–energy balance with $\Phi_\eta$) to validate settings.
 
 5. Units:
-   - Use $v=1$ nondimensionalization throughout. Remember: only the emitter speed modulates per-hit amplitude; receiver speed influences only power via $v_r$.
+   - Use $v=1$ nondimensionalization throughout. Remember: emission cadence and per-wavefront amplitude are constant; receiver speed influences only power via $v_r$.
 
 Plain language: At each time, find which past emissions can reach you now, sum their radial pushes (dimmed by how fast the emitters were moving), and step forward—either with sharp kicks at exact hit times or with tiny-thick shells for smooth integration.
