--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.6 - Walkthrough Step 6 — Well-posedness and regularization.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.6 - Walkthrough Step 6 — Well-posedness and regularization.md
@@ -5,7 +5,7 @@ Existing text excerpt:
 > $$
 > \delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),
 > $$
-> while preserving total emission $q_{\text{eff}}$.
+> while preserving total emission $q$.
 
 Detailed explanation (impulses vs smooth pushes):
 
