--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -1,6 +1,6 @@
 # Perspective: Why This Model Maps So Well
 
-This framework appears to fit a surprising breadth of phenomena not because of any single novelty, but because a small set of simple, mutually reinforcing structural decisions is doing most of the heavy lifting. Two widely discussed choices—reduction to two true primitives (±ε Architrinos) and choosing ε=|e/6|—help with parsimony and charge bookkeeping, but the outsized wins come from how delayed, radial-only action, speed-based modulation, and a self-interaction threshold conspire to produce stability, scale selection, and emergent “magnetic-like” behavior without ever invoking right-hand-rule cross products.
+This framework appears to fit a surprising breadth of phenomena not because of any single novelty, but because a small set of simple, mutually reinforcing structural decisions is doing most of the heavy lifting. Two widely discussed choices—reduction to two true primitives (±ε Architrinos) and choosing ε=|e/6|—help with parsimony and charge bookkeeping, but the outsized wins come from how delayed, radial-only action and a self-interaction threshold conspire to produce stability, scale selection, and emergent “magnetic-like” behavior without ever invoking right-hand-rule cross products.
 
 We work throughout in units with field speed $v=1$; per-hit accelerations are purely radial along $\hat{\mathbf{r}}$ and superpose linearly.
 
@@ -81,7 +81,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 ## Consequences that explain the “fit”
 
 - Stability without fine-tuned potentials:
-  - The |v|=1 switch plus velocity dimming sets operating points and prevents singular collapse.
+  - The |v|=1 switch and delay geometry set operating points and prevent singular collapse.
 - Scale emergence:
   - $d_0$ and $t_0$ arise from dynamics; they are not postulated rulers and clocks but attractors of the binary system.
 - Shielding and apparent inertia:
@@ -113,7 +113,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Use $\Phi_\eta$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\eta\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
-- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical emitter-only modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
+- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
 
 ---
 
