--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -134,7 +134,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Rigorous conditions for uniqueness/multiplicity of causal roots in accelerated motion and their contribution to stability.
 - Statistical mechanics of many-body sphere streams: when and how do coherent, Lorentz-like effective cones emerge, and with what characteristic speed relative to v?
 
-Plain language summary: Keep the hits radial, delay them in time, dim everything as it moves faster, and let fast movers run into their own wakes. From those four ideas, you get stable orbits, natural rulers and clocks, shielding that looks like inertia, and “magnetic-like” structures—all without any right-hand-rule magnetism.
+Plain language summary: Keep the hits radial, delay them in time, keep per-wavefront amplitude constant, and let fast movers run into their own wakes. From those four ideas, you get stable orbits, natural rulers and clocks, shielding that looks like inertia, and “magnetic-like” structures—all without any right-hand-rule magnetism.
 
 ---
 
@@ -162,7 +162,7 @@ Plain language: you never see the full book of who emitted what; you only see a 
 
 Absolute time and Euclidean frames remove coordinate ambiguity (synchronization and alignment) but not physical ambiguity:
 - Sign/side ambiguity: attraction from +ε on one side vs repulsion from −ε on the opposite side along the same line remain indistinguishable at an instant.
-- Distance–speed trade: A ∝ f(|v_em|)/r² leaves r and |v_em| entangled.
+- Distance scaling only: A ∝ 1/r²; emitter speed affects timing of causal roots but not per-hit amplitude in the canonical law.
 - Collinear superposition: several sources along the same unoriented line can sum to the same instantaneous A and L.
 - Self-hit aliasing: self-intersections can mimic external sources along L.
 
