--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -26,7 +26,7 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | $\Phi,\ \Phi_\eta$ | Potential and mollified potential from superposed shells. | Potential from superposing all shell contributions; $\Phi_\eta$ smooths the distribution so $\nabla\Phi_\eta$ exists pointwise and can be used to verify energy identities over resolved windows. |
 | $U = q'\,\Phi_\eta$ | Potential energy at a point (mollified; weak limit as $\eta\to 0$). | Scalar potential energy for a receiver in a mollified field. With $\mathbf{F}=-\nabla U$, work satisfies $\Delta E_k=-\Delta U$ on intervals that resolve the mollifier. |
 | $\mathbf{F} = -\nabla U$ | Force from the potential (pointwise for $\Phi_\eta$). | Equivalent to the per-hit law after integrating across a thin shell. Exact pointwise equality holds for $\Phi_\eta$; for $\eta\to 0$ it is interpreted in the distributional/integrated sense. |
-| $a_{o'\leftarrow j}(t; t_0)$ | Per-hit acceleration from source $j$ emitted at $t_0$ (purely radial, $\propto 1/r^2$). | The contribution from a single causal root: purely radial, falling as $1/r^2$ and scaled by an emitter-speed dimmer. The total acceleration sums these over all $j$ and all $t_0\in\mathcal{C}_j(t)$. |
+| $a_{o'\leftarrow j}(t; t_0)$ | Per-hit acceleration from source $j$ emitted at $t_0$ (purely radial, $\propto 1/r^2$). | The contribution from a single causal root: purely radial, falling as $1/r^2$. The total acceleration sums these over all $j$ and all $t_0\in\mathcal{C}_j(t)$. |
 | $v_r,\, v_\perp$ | Radial and transverse components of receiver velocity relative to $\hat{\mathbf{r}}$. | Decompose $\mathbf{v}$ by orthogonal projection onto $\hat{\mathbf{r}}$. Only $v_r$ changes instantaneously at a hit; instantaneous power is $\mathbf{a}\cdot\mathbf{v}$ equal to the magnitude of $\mathbf{a}$ times $v_r$. |
 | $d_0,\, t_0$ (emergent) | Minimal binary radius and characteristic fastest period from dynamics. | Emergent scales set by balance of delayed attraction and self-repulsion. They depend on $\kappa\,\epsilon^2$ and motion details but act as robust attractors in symmetric binaries. |
 | $\mathrm{SS}_a(t)$ | “Sphere stream” of worldline $a$ at observation time $t$ (union of all causal spheres). | The family of all causal spheres emitted along a worldline, evaluated at time $t$; a geometric picture of which shells can currently act at each point. |
