--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.11 - Walkthrough Step 11 — Emitter-speed modulation and calibration.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.11 - Walkthrough Step 11 — Emitter-speed modulation and calibration.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 11 — (Removed) Emitter-speed modulation
 
-This step is deprecated. The canonical law no longer includes emitter-speed dimming; the per-hit contribution is
+This step is deprecated. The per-hit contribution is
 $
 \mathbf{a}_{o′\leftarrow j}(t;t_0)=\kappa\,\sigma_{q_j q_{o′}}\,
 \frac{|q_j q_{o′}|}{r^2}\,\hat{\mathbf{r}}
