--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -213,7 +213,7 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 Physical idea: represent emission as a conserved, razor-thin spherical shell (a measure on the sphere), then drive particle motion by summing purely radial per-hit accelerations at causal intersection times. We work in units with field speed $v=1$ unless noted; replace $v$ by $c$ otherwise.
 
 Field representation (transport/continuity form)
-- Source impulse at $(t_0,\mathbf{s}_0)$ creates a shell supported on $r = v(t-t_0)$ with surface density that conserves a constant per-shell amplitude $q$ (no speed-based dimming):
+- Source impulse at $(t_0,\mathbf{s}_0)$ creates a shell supported on $r = v(t-t_0)$ with surface density that conserves a constant per-shell amplitude $q$:
   $$
   \rho(t,\mathbf{s}) \;=\; \frac{q}{4\pi r^2}\,\delta\!\big(r - v(t-t_0)\big)\,H(t-t_0),\quad r=\|\mathbf{s}-\mathbf{s}_0\|.
   $$
@@ -221,7 +221,7 @@ Field representation (transport/continuity form)
   $$
   \partial_t \rho + \nabla\!\cdot\!\big(v\,\hat{\mathbf{r}}\,\rho\big) \;=\; q\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0).
   $$
-- Emission is continuous with constant time-density $q(t)\equiv q_0$ (no explicit emitter-speed dimming).
+- Emission is continuous with constant time-density $q(t)\equiv q_0$.
 
 Per-hit equation of motion (EOM)
 - For a receiver $o'$ at time $t$ and a source $j$, causal emission times satisfy
@@ -277,7 +277,7 @@ Method 2 — Retarded Green’s function (integral)
 
 Method 3 — Event-driven radial-transport + per-hit EOM (current canonical)
 - Pros
-  - Directly implements the project’s delayed, radial-only interaction law with constant emission cadence and no explicit emitter-speed dimming.
+  - Directly implements the project’s delayed, radial-only interaction law with constant emission cadence.
   - Natural support for self-hits and superposition; local $1/r^2$ weighting makes near sources dominate.
   - Numerically lightweight for particle dynamics; works cleanly with impulsive or mollified ODE integration.
 - Cons
