--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -21,13 +21,13 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 2) Constant per-wavefront emission (no dimming)
+## 2) Constant per-wavefront emission 
 
 - What we assume:
   - Emission cadence and per-wavefront amplitude are constant.
 
 - Why it matters:
-  - Simplifies calibration and emphasizes that stability and scale selection arise from delay and self-interaction, not from amplitude dimming. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
+  - Simplifies calibration and emphasizes that stability and scale selection arise from delay and self-interaction. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
   - With η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
 
 ---
