--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -78,7 +78,7 @@ Radial motion and the $1/r^2$ factor (local trend):
 
 Path-history delay shifts both the causal root $t_0$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
-Modeling note: Emission cadence and per-wavefront amplitude are constant (no emitter-speed dimming). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
+Modeling note: Emission cadence and per-wavefront amplitude are constant. The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
 
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
@@ -97,7 +97,7 @@ while preserving total emission $q$. This produces continuous-in-time forces and
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting, which makes local sources dominate.
 
--   **Velocity Dependence:** The dynamics are delayed-only and purely radial. Architrinos are transceivers: they emit potential spheres at a constant cadence and constant per-wavefront amplitude (no emitter-speed dimming). The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
+-   **Velocity Dependence:** The dynamics are delayed-only and purely radial. Architrinos are transceivers: they emit potential spheres at a constant cadence and constant per-wavefront amplitude. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
 
 ### **Self-Interaction**
 
