--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
@@ -32,7 +32,7 @@ Detailed explanation (dynamical geometry):
 
 - Unit charge magnitude ($\epsilon>0$):
   - $\epsilon$ is the fundamental charge scale of an Architrino (Electrino $q=-\epsilon$, Positrino $q=+\epsilon$). In this framework $\epsilon$ is often identified with $|e|/6$, making quark charges integer multiples of $\epsilon$.
-  - Per-wavefront amplitude and emission cadence are constant (no emitter-speed dimming). The receiver’s speed does not additionally modulate the force magnitude.
+  - Per-wavefront amplitude and emission cadence are constant. The receiver’s speed does not additionally modulate the force magnitude.
 
 - Sign of interaction ($\sigma_{q q'}$):
   - $\sigma_{q q'}=\mathrm{sign}(q\,q')$ selects attraction vs repulsion while keeping the acceleration strictly collinear with $\hat{\mathbf{r}}$. Like-on-like (σ=+1) points along +$\hat{\mathbf{r}}$ (repulsion); unlike (σ=-1) points along -$\hat{\mathbf{r}}$ (attraction).
