--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -164,7 +164,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
 - $\kappa>0$ universal coupling.
 - $\eta>0$ mollifier width (regularization parameter).
-- Emission cadence and per-wavefront amplitude are constant (no emitter-speed dimming). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
+- Emission cadence and per-wavefront amplitude are constant. Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; emission cadence and per-wavefront amplitude are constant; receiver motion affects only instantaneous power.
@@ -184,7 +184,7 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - After formal definitions, add a brief “Plain language” sentence.
 - Use consistent symbol set: $\mathcal{C}_j(t)$, $r$, $\hat{\mathbf{r}}$, $v$, $\epsilon$, $\kappa$.
 - Equation tags (optional): (CT) causal-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
-- Phrase velocity effects without emitter-speed dimming; emission cadence and per-wavefront amplitude are constant.
+- Emission cadence and per-wavefront amplitude are constant.
 - Notation for “now”: use $t_{\text{now}}$ for a fixed current evaluation time; use $t_{\text{obs}}$ for observation time. Avoid Tnow/`T_now`; keep $t$ as the running variable elsewhere.
 - Emitters/receivers are individual Architrinos; composite assemblies never emit or receive as wholes; their behavior emerges from constituent Architrinos.
 - On first occurrence in a doc: “We work in units with field speed v=1 unless stated otherwise.”
@@ -192,5 +192,5 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - Notation lint (common mistakes):
   - Use bold for vectors: $\mathbf{v}$, not plain v.
   - Reserve $v$ for the field speed (scalar). Use $\|\mathbf{v}\|$ for speed magnitude, or $\beta=\|\mathbf{v}\|/v$; with $v=1$, $\beta=\|\mathbf{v}\|$.
-  - Do not introduce emitter-speed dimming functions $f(\beta)$; emission cadence and per-wavefront amplitude are constant.
+  - Emission cadence and per-wavefront amplitude are constant.
   - Do not write mixed forms like $|v|$ to mean speed; bold the vector and take its norm.
