--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
@@ -9,7 +9,7 @@ Existing text excerpt:
 Detailed explanation (degeneracies and inference limits):
 
 - Many-to-one mapping:
-  - Different combinations of source identity, charge magnitudes, distances, and emitter speeds can yield the same instantaneous hit magnitude and direction at the receiver.
+  - Different combinations of source identity, charge magnitudes, distances, and emission timings/geometry can yield the same instantaneous hit magnitude and direction at the receiver.
 
 - Sign ambiguity across a line:
   - Attraction from a positive charge on one side is indistinguishable, at an instant, from repulsion by a negative charge located at the diametrically opposite point along the same line.
