--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -114,7 +114,7 @@ It does not have direct knowledge of the source's identity, distance, or velocit
 This creates a more profound ambiguity: the receiver cannot distinguish between a negative potential from an Electrino on one side and a positive potential from a Positrino on the opposite side. An acceleration *towards* a point along the line of action could be interpreted as attraction to a Positrino at that point, or as repulsion from an Electrino located at the diametrically
 opposite point on the same line.
 
-Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission accounted for by an adjusted emission time and, if desired, a surrogate location along that line. The per-wavefront amplitude remains constant in this recast; it does not depend on emitter speed.
+Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission accounted for by an adjusted emission time and, if desired, a surrogate location along that line (a stationary, hypothetical source position chosen on the unoriented line to reproduce the same instantaneous hit). The per-wavefront amplitude remains constant in this recast; it does not depend on emitter speed.
 
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting expanding spherical shells. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
