--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -165,6 +165,7 @@ Absolute time and Euclidean frames remove coordinate ambiguity (synchronization 
 - Distance scaling only: A ∝ 1/r²; emitter speed affects timing of causal roots but not per-hit amplitude in the canonical law.
 - Collinear superposition: several sources along the same unoriented line can sum to the same instantaneous A and L.
 - Self-hit aliasing: self-intersections can mimic external sources along L.
+- Surrogate location recast: any instantaneous hit may be recast to a stationary surrogate source placed somewhere along L with an adjusted emission time; useful for inference and visualization, but it does not resolve the sign/side ambiguity or fix distance without temporal data.
 
 Consequence: even the absolute observer must reason statistically over ledger classes; “quantum-like” observability is not a contradiction but a necessity.
 
