--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -49,6 +49,7 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | Gaussian | The mollifier kernel $\delta_\eta$ used to replace $\delta$, producing smooth shells of width $\eta>0$. | A normalized bell-shaped kernel used as an approximate identity; parameter $\eta$ controls width and convergence as $\eta\to 0$. |
 | Heaviside | Step function $H(\tau)$; convention $H(0)=0$ (no instantaneous self-kick). | Step function used to restrict distributions to $\tau\ge 0$; with $H(0)=0$ it removes coincident-time contributions in self-interactions. |
 | Hit | A causal intersection event: some $t_0\in\mathcal{C}_j(t)$ where a shell reaches the receiver. | A solution $t_0\in\mathcal{C}_j(t)$. In the impulsive picture it produces a velocity jump; under mollification it appears as a brief, finite push. |
+| Surrogate location | Stationary, hypothetical emitter position chosen along the receiver’s current unoriented line of action that, together with an adjusted emission time, reproduces the same instantaneous hit. | An inference/visualization device: at an instant, any hit can be recast to a stationary surrogate on line L; per-wavefront amplitude is unchanged (no emitter-speed weighting), only causal timing shifts. |
 | Superposition | Linear addition of fields/accelerations from all sources/shells at a point and time. | Linearity at the level of distributions: contributions from all sources add. Near-field terms dominate due to $1/r^2$ and phase cancellations at large $r$. |
 | Transverse | Component orthogonal to $\hat{\mathbf{r}}$; e.g., $\mathbf{v}_\perp$ with $\mathbf{v}_\perp\cdot \hat{\mathbf{r}}=0$. | Component orthogonal to $\hat{\mathbf{r}}$; unchanged instantaneously by a single hit but can change over time as $\hat{\mathbf{r}}$ rotates with the geometry. |
 | Radial | Along the line of action $\hat{\mathbf{r}}$ (e.g., $v_r = \mathbf{v}\cdot\hat{\mathbf{r}}$). | Along the line $\hat{\mathbf{r}}$; every per-hit force is collinear with $\hat{\mathbf{r}}$ and thus updates the radial component of motion. |
