--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -187,6 +187,7 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - Emission cadence and per-wavefront amplitude are constant.
 - Notation for “now”: use $t_{\text{now}}$ for a fixed current evaluation time; use $t_{\text{obs}}$ for observation time. Avoid Tnow/`T_now`; keep $t$ as the running variable elsewhere.
 - Emitters/receivers are individual Architrinos; composite assemblies never emit or receive as wholes; their behavior emerges from constituent Architrinos.
+- Use “surrogate location” to denote a stationary, hypothetical emitter placed on the receiver’s current unoriented line of action that reproduces the same instantaneous hit; use “surrogate-location recast” when referring to this rewriting.
 - On first occurrence in a doc: “We work in units with field speed v=1 unless stated otherwise.”
 
 - Notation lint (common mistakes):
