--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -1,5 +1,11 @@
 
 
+# Walkthrough Step 12 — Comparative modeling frameworks for delayed, radial action
+
+We synthesize Steps 1–11 and the canonical Action to evaluate, side by side, three modeling options for the emission–propagation–interaction pipeline. We work in units with field speed v=1 unless stated otherwise; emission cadence and per-wavefront amplitude are constant; per-hit actions are purely radial along $\hat{\mathbf{r}}$ with 1/r² falloff; H(0)=0 excludes the coincident-time self-kick; no cross products/right-hand-rule terms appear.
+
+---
+
 **Setup / assumptions**
 
 * The emitter is at position $\mathbf{x}_s(t)$ in 3-D space (it can move).
@@ -252,6 +258,48 @@ Relation to Methods 1 and 2
 Plain language: Treat the field as razor-thin “paint” spread over a growing sphere so the total amount stays the same. Every time a shell reaches you, you get a straight-line shove that falls off like one over distance squared; we either treat it as a sharp kick or a short, smooth nudge.
 
 ---
+
+## Differential analysis (criteria-by-criteria)
+
+Axiomatic fidelity (delayed-only, radial-only, constant per-wavefront amplitude)
+- Method 1: Partially aligned. The PDE yields 1/(4πr) wave amplitudes; mapping to 1/r² per-hit accelerations requires gradients and conventions. Radial-only action is not built-in.
+- Method 2: Causality and superposition are exact; amplitudes are 1/(4πr) with a Jacobian |1−$\mathbf{n}\cdot\mathbf{v}_s$/$c$|⁻¹ when evaluating the retarded-time delta. To preserve constant per-wavefront amplitude in the canonical law, geometric factors are absorbed into κ when comparing accelerations.
+- Method 3: Exact match. Delayed-only, radial-only per-hit with constant per-wavefront amplitude is native. Geometric normalizations are conventionally absorbed into κ.
+
+Causal root structure, self-interaction, multiplicity
+- Method 1: Self-hits and multiple roots are implicit in the evolving field; they are not directly enumerated as discrete events.
+- Method 2: Retarded roots arise via solving $t-\tau=r(\tau)/c$; multiple roots and tangencies are explicit but require robust root-finding.
+- Method 3: Roots are primitive; multi-hit and self-hit regimes are treated natively. Conventions H(0)=0 and exclusion of $r=0$ beyond $\tau=0$ are explicit.
+
+Energetics and work
+- Method 1: Continuum energy bookkeeping is natural (φ, ∂tφ, ∇φ). Mapping to radial per-hit work needs careful averaging and alignment with the EOM.
+- Method 2: Exact potentials in free space; gradients give forces; care is needed near |1−$\mathbf{n}\cdot\mathbf{v}_s$/$c$| → 0 geometries.
+- Method 3: Energetics are validated via η-mollified potentials Φη and work–energy on resolved windows; impulses are recovered as η→0 in the weak sense.
+
+Numerical stability and well-posedness
+- Method 1: CFL constraints; dispersion/reflection control needed; robust under regularized sources; well posed on grids.
+- Method 2: Stable as an evaluation formula; computational issues concentrate in robust, multi-root solving and handling near-tangency Jacobians.
+- Method 3: Well posed with event handling or η-regularization; stability governed by root-tracking and step control; lightweight for many-body ODEs.
+
+Computational cost and scalability
+- Method 1: Heavy (3D grid + CFL time stepping). Cost grows with volume, resolution, and duration—independent of number of receivers.
+- Method 2: Moderate to heavy depending on receivers × times × sources × roots; efficient for few probes, costly for dense sampling.
+- Method 3: Light for particle dynamics. Cost scales with sources × average roots per step; independent of any spatial grid.
+
+Boundaries, media, and heterogeneity
+- Method 1: Natural—modify PDE coefficients (inhomogeneous c, damping, boundaries).
+- Method 2: Natural only in homogeneous free space; complex media/boundaries require bespoke Green’s functions.
+- Method 3: Natural in free space. Media/boundaries need additional modeling (e.g., corridor-level effective rules); not PDE-native.
+
+Observables and inference (Step 9)
+- Method 1: Full-field pictures aid intuition and corridor studies but obscure per-hit ambiguity without extra processing.
+- Method 2: Clarifies causal timing and geometry at probes; good for inference templates and surrogate-location recasts.
+- Method 3: Directly aligned with hit histories {A(t_k), L(t_k)}; best substrate for event-driven inference and assembly dynamics.
+
+Summary (one line each)
+- Method 1: Best for whole-field, media, and visualization; poorest fit to per-hit radial-only axioms without translation layers.
+- Method 2: Best for exact, pointwise, causal analysis in free space; good for calibration and sparsely sampled validation.
+- Method 3: Best for dynamics of many particles/assemblies under the canonical law; scales and matches axioms directly.
 
 ## Pros and cons (comparative)
 
