--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -2,7 +2,7 @@
 
 # Walkthrough Step 12 — Comparative modeling frameworks for delayed, radial action
 
-We synthesize Steps 1–11 and the canonical Action to evaluate, side by side, three modeling options for the emission–propagation–interaction pipeline. We work in units with field speed v=1 unless stated otherwise; emission cadence and per-wavefront amplitude are constant; per-hit actions are purely radial along $\hat{\mathbf{r}}$ with 1/r² falloff; H(0)=0 excludes the coincident-time self-kick; no cross products/right-hand-rule terms appear.
+We synthesize Steps 1–11 and the canonical Action to compare—side by side—the three modeling options for the emission–propagation–interaction pipeline and to recommend a primary approach (with supporting roles for the others). We work in units with field speed v=1 unless stated otherwise; emission cadence and per-wavefront amplitude are constant; per-hit actions are purely radial along $\hat{\mathbf{r}}$ with 1/r² falloff; H(0)=0 excludes the coincident-time self-kick; no cross products/right-hand-rule terms appear.
 
 ---
 
@@ -21,7 +21,7 @@ We synthesize Steps 1–11 and the canonical Action to evaluate, side by side, t
 * Continuous source (preferred): model the emitter as a moving point injection with time-density $q(t)$ (amplitude per unit time) at its instantaneous position, i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$. Each instant $t_0$ contributes a spherical shell; we do not count “shells per second” (pulse trains are merely numerical surrogates).
 * We want to know the field $\phi(\mathbf{x},t)$ (I’ll call the scalar field “potential” or simply $\phi$) produced at any point $\mathbf{x}$ and time $t$.
 
-I’ll explain **a time-based PDE/source** as well as **a integral / Green’s function / delayed solution** for this setup, define every symbol I use, and show how the expanding shells show up in each method. I’ll highlight how slowing/stopping the emitter is handled.
+We compare three frameworks: (1) a time-domain PDE/source, (2) an integral/Green’s-function (path history) solution, and (3) an event-driven radial-transport plus per-hit EOM. For each, we define symbols, show how the expanding shells appear, discuss how slowing or stopping the emitter is handled, and weigh trade-offs to inform a recommendation.
 
 ---
 
