--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -352,6 +352,14 @@ A qualitative “onion” sketch to visualize which excitations typically penetr
 
 Legend: [+] passes, [~] depends (energy/frequency/geometry), [x] mostly blocked/strongly attenuated
 
+| Layer | Photons | Neutrinos | Charged ±ε | Dark-matter-like neutral |
+| --- | --- | --- | --- | --- |
+| L4: Bulk molecular shell (solids/liquids; many-body opacity) | [~] material window; optical opaque, IR/UV/X/γ vary | [+] nearly transparent | [x] bind/deflect; do not traverse as free particles | [+] very weak coupling |
+| L3: Atomic electron cloud (bound electrons) | [~] photoelectric/Compton; X/γ penetrate better | [+] | [x] Coulomb-coupled; captured/scattered | [+] |
+| L2: Nuclear layer (nucleons; femtoscopic scale) | [~] γ can interact; strong attenuation in bulk | [+] weak interaction; mostly pass | [x] excluded as free traversers | [+] |
+| L1: Noether Core shielding (triply nested binaries; shielded) | [x] far-field cancels; no corridor capture | [~] tiny axial coupling only | [x] self/partner couplings dominate; no transit | [+] by hypothesis: minimal coupling |
+| L0: Axial corridors / flux-tube loci (coherent geometry) | [+] guided along corridor | [~] weak corridor coupling; alignment matters | [x] no cross-product forces; not a transit channel | [~] minimal, geometry-dependent |
+
 ```
 +===============================================================+
 | L4: Bulk molecular shell (solids/liquids; many-body opacity)  |
